DigIt CHANGE LOG
======================

2024/11/
	18 Added CropNext/Prev/All actions;
	   Deleted diCropAdvanced mode, take only Custom;
	   Re Added WIA Source with new Take params (must be tested);
        15 Added CropMode;
	   Added Array Interfaces;
	   Preview return a Single Filename and Take returns Array Interfaces;
	   Changed Entire acquisition structure with Take/Crop.
        12 Changed Source_Wia onSet method.
        07 Writed WIA Source Load/Save from XML;
	   Writed WIA Source OnSet maybe deeply tested;
	   Added defualt value when Load from XML in Twain Source
        06 Changed Interfaces method Enabled and added setEnabled;
	   Added Test of Interfaces Init in Register;
	   Added Test of Interfaces Enabled in Menu Build;
	   Added Enabled to False in Twain/WIA if no dll/wia manager founds;
	   First WIAParams save tests
        05 First Write of TDigIt_Source_WIA.GetFromUser 
        04 Added DigIt_Sources, DigIt_Destinations for future multiplatform use;
           Changed DigIt_Dest_SaveFiles_SettingsForm filename to DigIt_Destination_SaveFiles_SettingsForm;
           Moved use of DigIt_Source_XXX inside DigIt_Sources;
           Moved use of DigIt_Destination_XXX inside DigIt_Destinations;
           First adding of half empty DigIt_Source_WIA.

2024/09/10 Moved Source_Twain_Select and Settings Forms to DelphiTwain Package; 
	   Use of TTwainDeviceInfo.FromAddList

2024/08/19 TOpenArrayList use a generic Key intestead of String; 
           Removed EmptyImage.Allow Property in ImageManipulation

2024/08/01 Twain Source do not use index to Select Device (Twain change order in some cases); 
           32bit server Open using TW_IDENTITY;
           GetTwainSource function in 32bit server/Twain Source test current Selected Device is correct;
           DeviceInfoDifferent function to test Devices Names;
           TTwainSelectSource Execute return AScannerInfo: TTwainDeviceInfo 
 
2024/07/29 Use ResourceString and changed names in Sources; 