@@ -13,13 +13,13 @@ unit DigIt_Sources;
 interface
 
 uses
-  Digit_Source_Folder
   {$ifdef WINDOWS}
-  //, Digit_Source_Twain
-  , Digit_Source_WIA
+    Digit_Source_WIA,
+  //Digit_Source_Twain,
   {$endif}
   {$ifdef LINUX}
   {$endif}
+  Digit_Source_Folder
   ;
 
 implementation
