@@ -3667,7 +3667,7 @@ object DigIt_Main: TDigIt_Main
       OnClick = itemCropModeClick
     end
     object itemCropModeCustom: TMenuItem
-      Tag = 2
+      Tag = 1
       Caption = 'Custom'
       ImageIndex = 2
       OnClick = itemCropModeClick
